Changed List.copyOf() to Collections.unmodifiableList() to avoid redundant copy and because List.copyOf() is only available since Java SE 10 Changed zip to zipWith for consistency